tests/rename/should_compile/rn011.hs
module Imp100 where
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux
import {-# SOURCE #-} Imp100Aux

