tests/rename/should_fail/RnFail059_aux.hs
module RnFail059_aux where

import {-# SOURCE #-} RnFail059
